--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,12 +1,14 @@
 @import "tailwindcss";
 
 :root {
-  --vp-c-brand: var(--color-green-600);
-  --vp-c-brand-light: var(--color-green-400);
-  --vp-c-brand-lighter: var(--color-green-200);
-  --vp-c-brand-lightest: var(--color-green-50);
-  --vp-c-brand-dark: var(--color-green-900);
-  --vp-c-brand-dark: var(--color-green-950);
+  --vp-c-brand-1: var(--color-teal-600);
+  --vp-c-brand-2: var(--color-teal-500);
+  --vp-c-brand-3: var(--color-teal-400);
+  --vp-c-brand: var(--color-teal-600);
+  --vp-c-brand-light: var(--color-teal-400);
+  --vp-c-brand-lighter: var(--color-teal-200);
+  --vp-c-brand-lightest: var(--color-teal-50);
+  --vp-c-brand-dark: var(--color-teal-900);
   --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
     --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
